# StrangeGameEngine

./: ..gitignore.un~  .gitignore  CMakeLists.txt  Strange Games Engine.sln  debug.cpp  display.cpp  fileformats.cpp  gui.cpp  inputs.cpp  render.cpp  sge.cpp  sound.cpp  system.cpp  utility.cpp
Debug/: STARBASE.MOD  Strange Game Engine.ilk
Drug War X/: Character.h  Drug War X.vcxproj  Drug War X.vcxproj.filters  GameSaveLoad.cpp  GameSaveLoad.h  main.cpp  main.h
GLFW/lib/: glfw3.lib
PortAudio/lib/: portaudio.lib  portaudio_x64.exp  portaudio_x64.lib  portaudio_x86.exp  portaudio_x86.ilk  portaudio_x86.lib
Release/: Strange Game Engine.lib
RtAudio/lib/: rtaudio.exp  rtaudio.lib  rtaudio.pc
SGE-Test/: SGE-Test.vcxproj  main.cpp  main.h
StrangeGameEngine/: Strange Game Engine.aps  StrangeGameEngine.vcxproj  StrangeGameEngine.vcxproj.filters  controls.cpp  controls.h  debug.cpp  display.cpp  display.h  fileformats.cpp  gui.cpp  inputs.cpp  main.cpp  main.h  render.cpp  render.h  sge.cpp  sharedinternal.h  sound.cpp  sound.h  system.cpp  system.h  utility.cpp
StrangeGameEngine/Debug/: sound.obj.enc  vc140.idb
StrangeGameEngine/Release/: Strange Game Engine.iobj  Strange Game Engine.ipdb
Tools/: 8x8CharacterROMHelper.xlsx  FontDataConverter8x16.py  FontDataConverter8x8.py
Win32/Debug/: Drug War X.ilk  SGE-Test.ilk  Strange Game Engine.lib  TestSample.wav.bak
Win32/Release/: SGE-Test.iobj  SGE-Test.ipdb  Strange Game Engine.lib
include/SGE/: api.h  debug.h  display.h  fileformats.h  gui.h  inputs.h  render.h  sge.h  sound.h  system.h  utility.h
test/: main.cpp  main.h
x64/Debug/: SGE-Test.ilk  (+1 more)
(+33 files in other folders)
